hard-gists/3425960/run.log
=== Docker Run Log for 3425960 ===
Started at: Mi 29. Okt 13:51:08 CET 2025

[2025-10-29 13:51:08] START: Running container for 3425960
[2025-10-29 13:51:08] SUCCESS: Container e5c8627f4f575165addb2a1d1b0c31f72e1ad52fcf2561b0d58a8942de39a18c started for 3425960
=== Container logs for 3425960 ===
  File "/snippet.py", line 116
    print ''
    ^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3425960 ===
[2025-10-29 13:51:10] INFO: Container e5c8627f4f575165addb2a1d1b0c31f72e1ad52fcf2561b0d58a8942de39a18c has stopped
